# GeoVar

./: .gitignore  GEMINI.md  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
src/geovar/: cli.py  curves.py  geom.py  loss.py  opt.py  physics.py  plotter.py
tests/: test_curves.py  test_geom.py  test_loss.py  test_opt.py  test_physics.py
